RESOLVED FIXED 210820
Composited layers are misplaced inside RTL overflow scroller with visible scrollbar
https://bugs.webkit.org/show_bug.cgi?id=210820
Summary Composited layers are misplaced inside RTL overflow scroller with visible scr...
Simon Fraser (smfr)
Reported 2020-04-21 15:46:56 PDT
Composited layers are misplaced inside RTL overflow scroller with visible scrollbar
Attachments
Patch (24.04 KB, patch)
2020-04-21 15:48 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-04-21 15:48:50 PDT
Radar WebKit Bug Importer
Comment 2 2020-04-21 15:50:12 PDT
EWS
Comment 3 2020-04-21 18:28:53 PDT
Committed r260482: <https://trac.webkit.org/changeset/260482> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397133 [details].
Note You need to log in before you can comment on or make changes to this bug.